# ruvector-discoverable

./: .gitignore  CLAUDE.md  NEXT-SESSION.md  README.md
.github/workflows/: ci.yml
catalog/: adrs.json  adrs.md  archetype-coverage.md  catalog.md  hidden-features-bootstrap.md  inventory-bootstrap.md  m2-vs-m3-diff.md  uncategorized.md
catalog/by-archetype/: AgentFramework.md  AgentMemory.md  CodebaseIndex.md  GenomicAnalyzer.md  GraphReasoner.md  KnowledgeBase.md  LocalLLM.md  RecommendationEngine.md  TaxonomySearch.md  TimeSeriesMemory.md
catalog/by-category/: advanced.md  bindings.md  core.md  infrastructure.md  out_of_headline.md  pending_review.md  scaffolding.md
docs/plans/: m11-scope.md  m12-scope.md  m13-scope.md  m14-scope.md  m15-scope.md  m17-scope.md  m31-scope.md  m6-scope.md  ruvector-sdk-prd.md
docs/upstream-issues/: 01-graph-node-cypher-stub.md  02-broken-umbrella-packages.md  03-core-vectordb-construction-quirks.md  04-sona-microlora-warmup.md  05-no-model-loading-api.md  06-query-route-under-populated-fields.md  07-rvagent-family-unpublished.md  08-server-cluster-broken-publish.md  09-graph-wasm-defects.md  10-ruvllm-wasm-defects.md  11-router-delete-deadlock.md  README.md
tools/archetypes/: assignments.mjs  generate.mjs
tools/extract-adrs/: extract-adrs.mjs
tools/inventory/: inventory.mjs
tools/reprobe-bindings/: reprobe.mjs
tools/reprobe-bindings/probes/: 01-graph-node-cypher-stub.mjs  03-core-dimension-singleton.mjs  06-ruvllm-wrapper-case-rename.mjs  (+3 more)
tools/ruvector-cataloger/: Cargo.toml
tools/ruvector-cataloger/src/: main.rs
